--- a/node-cli/package.json
+++ b/node-cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mentormate/node-cli",
-  "version": "3.3.0",
+  "version": "3.3.1",
   "description": "Node CLI",
   "repository": {
     "url": "git+https://github.com/MentorMate/node-project-cli.git"
@@ -11,8 +11,8 @@
   },
   "files": [
     "assets",
-    "src",
     "docs",
+    "dist",
     "bin"
   ],
   "scripts": {
