--- a/.github/workflows/test-example-applications.yaml
+++ b/.github/workflows/test-example-applications.yaml
@@ -3,7 +3,35 @@ name: Testing Example Applications
 on: [push, pull_request]
 
 jobs:
+  setup:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Use Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: 18
+
+    - name: Install dependencies
+      run: npm install
+      working-directory: node-cli
+
+    - name: Install Nest CLI
+      run: npm install -g @nestjs/cli
+
+    - name: Build
+      run: npm run build
+      working-directory: node-cli
+
+    - name: Run generate-projects script
+      run: bash generate-projects.sh
+      working-directory: node-cli
+
   test:
+    needs: setup
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -50,20 +78,20 @@ jobs:
 
         sed -i 's/NODE_ENV=.*/NODE_ENV=test/g' .env.test
         sed -i 's/PORT=.*/PORT=3000/g' .env.test
-        sed -i 's/HOST=.*/HOST=localhost/g' .env.test
+        sed -i 's/HOST=.*/HOST=0.0.0.0/g' .env.test
 
         sed -i 's/ERROR_LOGGING=.*/ERROR_LOGGING=false/g' .env.test
         sed -i 's/REQUEST_LOGGING=.*/REQUEST_LOGGING=false/g' .env.test
         sed -i 's/SWAGGER=.*/SWAGGER=false/g' .env.test
 
-        sed -i 's/PGHOST=.*/PGHOST=localhost/g' .env.test
+        sed -i 's/PGHOST=.*/PGHOST=0.0.0.0/g' .env.test
         sed -i 's/PGPORT=.*/PGPORT=5432/g' .env.test
         sed -i 's/PGUSER=.*/PGUSER=postgres/g' .env.test
         sed -i 's/PGPASSWORD=.*/PGPASSWORD=password/g' .env.test
         sed -i 's/PGDATABASE=.*/PGDATABASE=test/g' .env.test
 
         sed -i 's/MONGO_PROTOCOL=.*/MONGO_PROTOCOL=mongodb/g' .env.test
-        sed -i 's/MONGO_HOST=.*/MONGO_HOST=localhost/g' .env.test
+        sed -i 's/MONGO_HOST=.*/MONGO_HOST=0.0.0.0/g' .env.test
         sed -i 's/MONGO_PORT=.*/MONGO_PORT=27017/g' .env.test
         sed -i 's/MONGO_USER=.*/MONGO_USER=root/g' .env.test
         sed -i 's/MONGO_PASSWORD=.*/MONGO_PASSWORD=password/g' .env.test
