--- a/node-cli/package.json
+++ b/node-cli/package.json
@@ -48,7 +48,8 @@
     "sort-package-json": "^2.4.1",
     "spdx-license-list": "^6.6.0",
     "ts-jest": "^29.1.2",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "tsc-alias": "^1.8.8"
   },
   "bugs": {
     "url": "https://github.com/MentorMate/node-project-cli/issues"
