added gateway microservice

--- a/nest-ms-pg-auth0/.env.example
+++ b/nest-ms-pg-auth0/.env.example
@@ -28,5 +28,14 @@ AUTH0_CLIENT_ID=CLIENT_ID
 AUTH0_AUDIENCE=AUDIENCE
 AUTH0_CLIENT_SECRET=CLIENT_SECRET
 
+# Microservices URLs
+AUTH_API_HOST=auth-dev
+AUTH_API_PORT=3001
+AUTH_API_URL=http://${AUTH_API_HOST}:${AUTH_API_PORT}/
+TODOS_API_HOST=todos-dev
+TODOS_API_PORT=3002
+TODOS_API_URL=http://${TODOS_API_HOST}:${TODOS_API_PORT}/
+
+# RabbitMQ URI and queues
 RABBIT_MQ_URI=amqp://rabbitmq:5672
 RABBIT_MQ_AUTH_QUEUE=auth
