--- a/nest-ms-pg-auth0/package.json
+++ b/nest-ms-pg-auth0/package.json
@@ -12,7 +12,7 @@
     "db:migrate:latest": "ts-node node_modules/knex/bin/cli.js migrate:latest --migrations-directory ./migrations --client pg --migrations-table-name knex_migrations --connection $(ts-node scripts/db-connection)",
     "db:migrate:rollback": "ts-node node_modules/knex/bin/cli.js migrate:rollback --migrations-directory ./migrations --client pg --migrations-table-name knex_migrations --connection $(ts-node scripts/db-connection)",
     "db:migrate:up": "ts-node node_modules/knex/bin/cli.js migrate:up --migrations-directory ./migrations --client pg --migrations-table-name knex_migrations --connection $(ts-node scripts/db-connection)",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
     "image:build": "DOCKER_BUILDKIT=1 docker build -t nest-ms-pg-auth0 .",
     "image:run": "docker run --rm --net host -e NODE_ENV=production --env-file .env nest-ms-pg-auth0",
     "license:check": "license-checker --summary --excludePrivatePackages --onlyAllow $(node ./licenses-allowed.js ';')",
@@ -24,11 +24,11 @@
     "start": "node -r dotenv/config ./node_modules/@nestjs/cli/bin/nest.js start",
     "start:debug": "node -r dotenv/config ./node_modules/@nestjs/cli/bin/nest.js start --debug --watch",
     "start:dev": "node -r dotenv/config ./node_modules/@nestjs/cli/bin/nest.js start --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "node dist/apps/nest-ms-pg-auth0/main",
     "test": "npm run test:unit && npm run test:e2e",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "npx jest --config ./test/jest-e2e.config.js --runInBand",
+    "test:e2e": "npx jest --config ./apps/nest-ms-pg-auth0/test/jest-e2e.config.js --runInBand",
     "test:e2e:cov": "npm run test:e2e -- --coverage",
     "test:unit": "jest",
     "test:unit:cov": "jest --coverage",
@@ -37,6 +37,7 @@
   "dependencies": {
     "@fastify/compress": "^7.0.3",
     "@fastify/helmet": "^11.1.1",
+    "@fastify/http-proxy": "^9.5.0",
     "@nestjs/axios": "^3.0.2",
     "@nestjs/common": "^10.3.8",
     "@nestjs/config": "^3.2.2",
@@ -52,6 +53,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.6",
+    "fastify": "^4.26.2",
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.1.0",
     "knex": "^3.1.0",
